Ajout d'un formulaire pour up les témoignage sur firebase

--- a/css/quizz.css
+++ b/css/quizz.css
@@ -7,6 +7,10 @@
 body {
     font-family: sans-serif;
 }
+
+/**********************/
+/***** PAGE INDEX *****/
+/**********************/
 .bloc {
     height: 100vh;
     max-width: 640px;
@@ -24,10 +28,11 @@ body {
     color: #555;
     box-shadow: 0px 2px 5px #ccc;
 }
-.quizz_header span:first-child {
+.quizz_header span:first-child a {
     font-size: 22px;
     font-weight: 600;
     color: #e67e22;
+    text-decoration: none;
 }
 .quizz_header span:last-child {
     font-size: 18px;
@@ -107,6 +112,14 @@ body {
     outline: none;
     float: right;
     box-shadow: 1px 1px 5px grey;
+}
+.quizz_button2{
+    margin-top: 20px;
+    width: 80%;
+    text-decoration: none;
+    line-height: 50px;
+    text-align: center;
+    float: inherit;
 }
 
 /* hover bloc */
@@ -190,7 +203,6 @@ body {
     }
 }
 
-
 /* information form */
 .bloc2,
 .bloc3,
@@ -267,38 +279,110 @@ body {
     font-size: 22px;
 }
 .sbloc0 {
-    padding: 30vh 60px;
+    padding: 30vh 50px;
 }
 .sbloc0 p {
-    font-size: 24px;
+    font-size: 17px;
     text-align: center;
     margin-bottom: 20px;
     color: #7a7a7a;
+    display: block;
 }
-.sbloc0 button {
+.sbloc0 button,
+.sbloc0 .quizz_button2{
     display: block;
     float: inherit;
     margin: 0 auto;
     width: 220px;
+    font-family: "lato",sans-serif;
+    font-weight: 100;
+    font-size: 16px;
+}
+.sbloc0 .quizz_button2 {
+    padding-top: 5px;
+    margin:  20px auto;
+    word-break: break-all;
+    line-height: inherit;
+    background: #007E99;
 }
 .bloc0 p:nth-child(3) {
     margin-top: 30px;
     font-size: 20px;
 }
 .bloc0 p:nth-child(4) {
-    color: #007E99;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 
-
-/* TABLET STYLE */
-
-
-
-
-
-
+/***************************/
+/***** PAGE TEMOGNAGES *****/
+/***************************/
+.testimony-bloc {
+    display: block;
+}
+.testimony_body {
+    padding: 10vh 20px;
+}
+.testimony_body p {
+    line-height: 1.4;
+    color: #5a5a5a;
+    font-size: 15px;
+}
+.testimony_form {
+    margin-top: 30px;
+}
+.testimony_form label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #7a7a7a;
+}
+.testimony_form input,
+.testimony_form textarea{
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    padding-left: 10px;
+    font-family: "lato",sans-serif;
+    font-size: 16px;
+    color: #555;
+}
+.testimony_form textarea{
+    height: 150px;
+    padding: 10px;
+}
+.testimony_form button {
+    font-family: "lato";
+    font-size: 16px;
+    font-weight: 1;
+}
+.testimony_form .error {
+    border-color: #f00;
+}
+.colored {
+    color: #f00;
+}
+.tanmirt2 {
+    background: #44bd32;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    height: 70px;
+    width: 40%;
+    line-height: 70px;
+    border-radius: 2px;
+    font-size: 15px;
+    box-shadow: 1px 1px 5px #aaa;
+    display: none;
+}
+.testimony_form a {
+    color: #007E99;
+}
 
 
 
