--- a/css/quizz.css
+++ b/css/quizz.css
@@ -163,6 +163,16 @@ body {
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
     background: #e67e22;
 }
+.settlement {
+    display: block;
+    padding: 10px;
+    width: 220px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    color: #007E99;
+}
 .lds-ellipsis div:nth-child(1) {
     left: 6px;
     animation: lds-ellipsis1 0.6s infinite;
@@ -385,8 +395,56 @@ body {
     color: #007E99;
 }
 
-
-
+/*****************************/
+/****** PAGE REGLEMENT *******/
+/*****************************/
+.regles-bloc {
+    display: block;
+}
+.regle_body {
+    padding: 20px;
+    line-height: 1.6;
+    color: #555;
+}
+.colored_one {
+    color: #e67e22;
+}
+.regle_body h1 {
+    font-size: 20px;
+    line-height: normal;
+    margin-bottom: 20px;
+}
+.regle_body ul {
+    padding: 10px 20px;
+}
+.regle_body li {
+    margin-bottom: 10px;
+    font-size: 16px;
+}
+.regle_body h2 {
+    font-size: 18px;
+    color: #007E99;
+    margin-bottom: 20px;
+    padding-left: 20px;
+}
+.c_button {
+    text-align: right;
+}
+.regle_body a {
+    display: inline-block;
+    height: 40px;
+    background: #e67e22;
+    line-height: 40px;
+    width: 160px;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+    border-radius: 2px;
+}
+.regle_body p:nth-child(2) {
+    margin-bottom: 10px;
+}
 
 
 
